<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <!--    <androidx.fragment.app.FragmentContainerView-->
    <!--        android:id="@+id/fragmentContainerView"-->
    <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_marginTop="0dp"-->
    <!--        android:layout_marginBottom="0dp"-->
    <!--        app:defaultNavHost="true"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:navGraph="@navigation/nav_graph" />-->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feed_fragment_title"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@null"
                android:contentDescription="@string/image"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_share_24"
                app:tint="#fff" />

            <ImageButton
                android:id="@+id/btn_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@null"
                android:contentDescription="@string/image"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_chart_24"
                app:tint="#fff" />

            <ImageButton
                android:id="@+id/btn_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@null"
                android:contentDescription="@string/image"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_info_24"
                app:tint="#fff" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/cat"
        android:layout_width="188dp"
        android:layout_height="190dp"
        android:layout_marginTop="260dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginEnd="9dp"
        android:text="@string/satiety"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cat"
        app:layout_constraintEnd_toStartOf="@+id/clickField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/clickField"
        android:layout_width="67dp"
        android:layout_height="25dp"
        android:text="0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <Button
        android:id="@+id/feedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red_button"
        android:text="@string/feed_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat" />
</androidx.constraintlayout.widget.ConstraintLayout>